sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:8: error: not found: value i
  for (j <- 0 to i-1){
                 ^AlgCocktailSort1:14: error: not found: value i
for (j <- i-1 to 0 by -1){
          ^